resolve @chakra-ui/color-mode to a version smaller than in my package.json

--- a/styles/Faq.module.css
+++ b/styles/Faq.module.css
@@ -2,6 +2,7 @@
   width: 90%;
   max-width: 1200px;
   margin: 60px auto;
+  min-height: calc(100vh - 200px);
 }
 
 .faqText {
